@@ -1,6 +1,7 @@
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -15,8 +16,7 @@ import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.common.serialization.StringDeserializer;
 
 public class ClientListener implements Runnable {
-
-	private static  final HashMap<Integer, String> hm_machine_ips;
+	private static  HashMap<Integer, String> hm_machine_ips=new HashMap<>();;
 	private final KafkaConsumer<String, String> consumer;
 	private final List<String> topics;
 	private final int id;
@@ -24,7 +24,7 @@ public class ClientListener implements Runnable {
 	public ClientListener(int id, String zookeeper, String groupId, List<String> topics) {
 		this.id = id;
 		this.topics = topics;
-
+	
 		Properties props = new Properties();
 		props.put("zookeeper.connect", zookeeper);
 		props.put("group.id", groupId);
@@ -36,11 +36,24 @@ public class ClientListener implements Runnable {
 		this.consumer = new KafkaConsumer<>(props);
 	}
 
-	public void executeCommand(String cont_id, String dest) {
+	public void executeCommand(String cont_id, int dest_machine) {
 
 		try {
-			String command = "/opt/kafka_2.11-0.9.0.0/migrate.sh " + cont_id + " " + dest;
-			Process proc = Runtime.getRuntime().exec(command);
+			String command = "/opt/kafka_2.11-0.9.0.0/migrate.sh " + cont_id + " " + dest_machine;
+			//Process proc = Runtime.getRuntime().exec(command);
+			
+			ProcessBuilder builder = new ProcessBuilder("/opt/kafka_2.11-0.9.0.0/migrate.sh");
+		        builder.redirectErrorStream(true);
+		        Process p = builder.start();
+		        BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()));
+		        String line;
+		        while (true) {
+		            line = r.readLine();
+		            if (line == null) { break; }
+		            System.out.println(line);
+		        }
+			
+			
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -49,14 +62,15 @@ public class ClientListener implements Runnable {
 	@Override
 	public void run() {
 		try {
+			consumer.subscribe(topics);
 			while (true) {
 				System.out.println("Hello world ");
 				ConsumerRecords<String, String> records = consumer.poll(Long.MAX_VALUE);
 				for (ConsumerRecord<String, String> record : records) {
 					String msg = record.value();
 					String cont_id = msg.substring(0, msg.indexOf(",")).trim();
-					String dest_machine = msg.substring(msg.indexOf(",") + 1, msg.length()).trim();
-					System.out.println(record.topic() + " Container  " + cont_id + " Dest: " + dest_machine);
+					int dest_machine = Integer.parseInt(msg.substring(msg.indexOf(",") + 2, msg.length()).trim());
+					System.out.println(record.topic() + " Container  " + cont_id + " Dest: " + dest_machine+" "+hm_machine_ips.get(dest_machine));
 					executeCommand(cont_id, dest_machine);
 
 				}
@@ -84,11 +98,17 @@ public class ClientListener implements Runnable {
 			File file = new File("/opt/kafka_2.11-0.9.0.0/MachineID");
 			BufferedReader br = new BufferedReader(new FileReader(file));
 			topic = "L" + br.readLine();
+			file=null;
 			file = new File("/opt/kafka_2.11-0.9.0.0/MachineInfo");
+			br=null;
 			br = new BufferedReader(new FileReader(file));
 			while ((readLine = br.readLine()) != null) {
-				
+				int m_id=Integer.parseInt(readLine.substring(0, readLine.indexOf(" ")).trim());
+				String hostname_ip=readLine.substring(readLine.indexOf(" "),readLine.length()).trim();
+				System.out.println("Mid "+m_id+" Hostname "+hostname_ip);
+				hm_machine_ips.put(m_id,hostname_ip);
 			}
+			System.out.println("Mid is "+hm_machine_ips.keySet());
 		}
 
 		catch (Exception e) {
